# sohibbot

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md.template  ERP_PLAN.md  HANDOFF.md  ONBOARDING.md  PLAN_LAUNCH.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  pyproject.toml  setup.py
agents/_templates/: README.md
el_solver/: __init__.py  agent.py  config.py  llm.py  memory.py
el_solver/agents/: __init__.py  base.py
el_solver/channels/: cli.py  handler.py  web.py
el_solver/core/: agent_io.py  approval.py  autonomy.py  backup.py  budget.py  capability_graph.py  causal.py  clarifier.py  confidence.py  conversation.py  crisis_handler.py  decision.py  decision_engine.py  decomposer.py  ethical_guardrails.py  eval.py  events.py  factory.py  gap_detector.py  initiative.py  kpi_ingest.py  messaging.py  messenger.py  orchestrator.py  orchestrator_chain.py  pattern_miner.py  planner.py  portfolio_planner.py  proactive.py  prompt_mutator.py  proposal.py  registry.py  retrieval.py  risk.py  scheduler.py  self_eval.py  skill_gap.py  smoke.py  templates.py  user_model.py  (+1 more)
el_solver/evaluations/: observability.py  reports.py  tracer.py
landing/: COPY_REFERENCE.md  index.html  proxy.php
memory/: MEMORY.md
products/: README.md
scripts/: browser.py  claude_telegram.py  create_agent.py  start_bot.bat  start_bot.sh
website/: .htaccess  404.html  accessibility.html  ad-art.html  alumni.html  angkatan.html  bisnis.html  event.html  index.html  news.html  pengurus.html  privacy.html  robots.txt  sejarah.html  sitemap.xml  skills-lock.json  terms.html
(+39 files in other folders)
