[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sohibbot"
version = "1.0.0"
description = "Your personal AI bot — powered by Claude Code, runs on your machine"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "filelock>=3.16.0",
    "rich>=13.8.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "ddgs>=0.1",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "lxml-html-clean>=0.4",
    "readability-lxml>=0.8",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[project.scripts]
sohibbot = "el_solver.channels.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["el_solver*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
